# ToneSugar

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements-ci.txt
.github/workflows/: black.yml  tests.yml
analyzer/: Dockerfile  handler.py  requirements.txt
app/: Dockerfile  db_dynamo.py  main.py
infra/: 01_create_s3_and_ecr.sh  02_deploy_dynamodb.sh  03_create_roles_and_policies.sh  04_push_lambda_to_ecr_and_deploy.sh  05_push_app_to_ecr.sh  06_ecs_run_task.sh  cleanup_all_resources.sh  cleanup_roles_only.sh  create_cloudwatch_logs.sh  deploy_dynamodb.sh  env.example  list_all_tasks.sh  push_lambda_to_ecr_and_deploy.sh  stop_all_tasks.sh  tail_lambda_logs.sh  tail_logs.sh
tests/: conftest.py  test_app_main.py  test_lambda_handler.py
