[project]
name = "tunesugar"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "boto3>=1.40.59",
    "boto3-stubs==1.40.59",
    "fastapi>=0.120.0",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["tunesugar"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
